change sipstack.audioOnly to sendVideo and offerToReceiveVideo to receiveVideo

--- a/styles/fullscreen.styl
+++ b/styles/fullscreen.styl
@@ -1,20 +1,21 @@
 .bdsft-webrtc
-  .enableFullscreen:not(.fullscreen-shown) .fullscreenExpand,
-  .enableFullscreen.fullscreen-shown .fullscreenContract
-    {fadeIn}
+  .cell-fullScreen
+    &.enableFullscreen:not(.fullscreen-shown) .fullscreenExpand,
+    &.enableFullscreen.fullscreen-shown .fullscreenContract
+      {fadeIn}
 
-  .enableFullscreen.fullscreen-shown .fullscreenExpand,
-  .enableFullscreen:not(.fullscreen-shown) .fullscreenContract
-    {fadeOut}  
+    &.enableFullscreen.fullscreen-shown .fullscreenExpand,
+    &.enableFullscreen:not(.fullscreen-shown) .fullscreenContract
+      {fadeOut}  
 
-  :not(.enableFullscreen).cell-fullScreen
-    display none !important
-    
-  .conference .fullscreenExpand, 
-  .conference .fullscreenContract
-    text-align left !important
+    &:not(.enableFullscreen)
+      display none !important
+      
+    &.conference .fullscreenExpand, 
+    &.conference .fullscreenContract
+      text-align left !important
 
-  .audioOnly .fullscreenExpand, 
-  .audioOnly .fullscreenContract,
-  .audioOnly .cell-fullScreen
-    display none !important
+    &:not(.sendVideo):not(.receiveVideo) .fullscreenExpand, 
+    &:not(.sendVideo):not(.receiveVideo) .fullscreenContract,
+    &:not(.sendVideo):not(.receiveVideo)
+      display none !important
